--- a/src/TheCallCenter/TheCallCenter.csproj
+++ b/src/TheCallCenter/TheCallCenter.csproj
@@ -15,6 +15,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Hubs\" />
+  </ItemGroup>
+
   <Target Name="client-app" BeforeTargets="ComputeFilesToPublish">
     <Exec Command="npm install" WorkingDirectory="client"></Exec>
     <Exec Command="npm run build" WorkingDirectory="client"></Exec>
